major improvement: added email onCreateQuestion, added email onComment, added follow function, and fixed wording

--- a/client/app/about/aboutcreator.html
+++ b/client/app/about/aboutcreator.html
@@ -41,7 +41,7 @@
 
 ผมได้ตั้งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี เป็นภาษาบาลีที่มีความหมายว่า <br><span style="font-size:1.5em;">ชีวิตที่มีการเป็นอยู่ที่เนื่องด้วยการให้ของผู้อื่น</span><br>
 
-เว็บเพื่อนใจนี้เป็นผลงานแรกที่มอบให้กับทุกท่าน ผมทํางานด้วยใจจริงๆโดยเอาความดีและความเป็นอยู่ของผมเองมาอยู่บนเส้นด้ายแห่งทานและการให้ของทุกท่าน ดังนั้นถ้าต้องการช่วยเหลือและสนับสนุนผมไม่ว่าจะเป็นทางใด มากหรือน้อย ทางด้านร่างกายหรือจิตใจ เช่น คําพูดที่ให้กําลังใจหรือการบริจากข้าวปลาอาหาร ผมก็จะซาบซึ้งดีใจขอบคุณและมีกําลังใจมากในการทําความดีให้ทุกท่านต่อไปโดยไม่หวังผลตอบแทน<br>
+เว็บเพื่อนใจนี้เป็นผลงานแรกที่มอบให้กับทุกท่าน ผมทํางานด้วยใจจริงๆโดยเอาความดีและความเป็นอยู่ของผมเองมาอยู่บนเส้นด้ายแห่งทานและการให้ของทุกท่าน ดังนั้นถ้าต้องการช่วยเหลือและสนับสนุนผมไม่ว่าจะเป็นทางใด มากหรือน้อย ทางด้านร่างกายหรือจิตใจ ผมก็จะซาบซึ้งดีใจขอบคุณและมีกําลังใจมากในการทําความดีให้ทุกท่านต่อไปโดยไม่หวังผลตอบแทน<br>
 
 ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
 
