--- a/client/app/account/profile/profile.html
+++ b/client/app/account/profile/profile.html
@@ -20,9 +20,11 @@
 	<div class="row nav">    
         <div class="col-md-4"></div>
         <div class="col-md-8 col-xs-12" style="margin: 0px;padding: 0px; margin-top:-25px;">
-            <div class="col-md-4 col-xs-4 well"><i class="fa fa-gift"></i> ให้กําลังใจ<br>{{currentUser.jais_count}}</div>
-            <div class="col-md-4 col-xs-4 well"><i class="fa fa-heart"></i> ตอบปัญหา<br>{{currentUser.answers_count}}</div>
-            <div class="col-md-4 col-xs-4 well"><i class="fa fa-question"></i> ถาม<br>{{currentUser.questions_count}}</div>
+            <div class="col-md-2 col-xs-2 well"><i class="fa fa-gift"></i> ให้กําลังใจ<br>{{currentUser.jais_count}}</div>
+            <div class="col-md-2 col-xs-2 well"><i class="fa fa-heart"></i> ตอบปัญหา<br>{{currentUser.answers_count}}</div>
+            <div class="col-md-2 col-xs-2 well"><i class="fa fa-question"></i> ถาม<br>{{currentUser.questions_count}}</div>
+            <div class="col-md-2 col-xs-2 well"><i class="fa fa-ambulance"></i> ติดตาม<br>{{currentUser.following_count}}</div>
+            <div class="col-md-2 col-xs-2 well"><i class="fa fa-heart-o"></i> มีคนตาม<br>{{currentUser.follower_count}}</div>
         </div>
     </div>
 
