--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -35,18 +35,18 @@
  ' class="animated slideInUp row" style="margin-right: 0; margin-left:0;">
  <div class="col-md-8 triangleRight box" style="padding:50px;"ani-scroll="300">
   <h1 style="font-size: 6em;">1. แบ่งบันปัญหาใจ</h1>
-  <p style='text-align: center; text-justify: inter-word; padding:15px;'>ไม่ว่าจะเป็นเรื่องอะไรที่ทําให้เราติดใจ เล็กหรือใหญ่;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
+  <p style='text-align: center; text-justify: inter-word; padding:15px;'>ไม่ว่าจะเป็นเรื่องอะไรที่ทําให้เราติดใจ เล็กหรือใหญ่ มีปัญหาที่อยากถามแต่ไม่รู้จะไปถามใคร เข้ามาถามได้เลยที่นี้ สามารถถามโดยระบุหรือไม่ระบุชื่อก็ได้ ความสบายใจ</p>
 </div>
 <div class="col-md-4"></div>
 <div class="clearfix"></div>
 <div class="col-md-4"></div>
 <div class="col-md-8 triangleLeft box" style="padding:50px;" ani-scroll="820">
   <h1 style="font-size: 6em;">2. ช่วยกันตอบปัญหาใจ</h1>
-  <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
+  <p>การช่วยคนอื่นตอบปัญหาทางใจนั้นเป็นการช่วยเหลือที่สูงส่ง คนเราบ้างครั่งไม่ได้ต้องการอาหารหรือบ้านใหญ่ๆเท่าคําพูดและกําลังใจจากผู้อื่น ดังนั้นถ้าเราเห็นว่าเขาต้องการความช่วยเหลือ ถ้าเราสละเวลาของเรามาช่วยผู้ได้ก็ได้จะเป็นบุญมาก</p>
 </div>
 <div class="col-md-10 triangleRight box" style="padding:50px;" ani-scroll="1170">
   <h1 style="font-size: 6em;">3. ได้คําตอบ ได้เพื่อนใหม่ และได้ทําให้โลกนี้อบอุ่นขึ้น</h1>
-  <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
+  <p>ผลของเพื่อนใจนี้ก็เพื่อเป็นพื้นที่ในพัฒนาจิตใจของสังคมให้รู้จักแบ่งบันและช่วยเหลือกันและกัน การตอบคําถามและถามปัญหาทางใจนั้นอาจจะดูเป็นเพียงความช่วยเหลือเล็กๆแต่ที่จริงแล้วเป็นการกระที่ยิ่งใหญ่ ที่เป็นเหมือนแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาให้ได้เจอคําตอบนั้นโดยเร็ว</p>
 </div>
 </div>
 
