--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -9,9 +9,31 @@
 <meta property="og:type" content="website" view-head/>
 <meta property="og:locale" content="th_TH" view-head/>
 
-<div class="container-fluid background-blue-gradient">
+<div class="container-fluid background-blue-gradient" style="padding-top: 15px;">
 
-	<div class="col-lg-2 col-sm-12"></div>
+	<div class="col-sm-12 col-lg-2">
+		<div ng-if="question" class="panel panel-default panel-card haveBorder">
+			<div class="panel-heading">
+			<img ng-cloak class="ng-cloak"ng-src="https://placeimg.com/880/640/nature" />
+			</div>
+			<div class="panel-figure">
+				<img class="img-responsive img-circle haveBorder" ng-src="{{::question.owner.coverimg}}" />
+			</div>
+			<div class="panel-body text-center">
+				<h4 class="panel-header"><a ng-href="/users/{{::question.ownerId}}">@{{question.owner.username}}</a></h4>
+			</div>
+			<div class="panel-thumbnails text-center">
+				<div ng-if="!followed && !questionOwner()" >
+				<button class="btn btn-info btn-lg" role="button" style="margin:0 auto; display:block;" ng-click="follow()"><i class="fa fa-user-plus"></i><br>ฟอลโล่ หรือ ติดตาม</button><br>
+				<small>คุณสามรถติดตามเมื่อเพื่อนใจคนนี้ถามปัญหาโดยการกดปุ่ม 'ฟอลโล่' ข้างบน</small>
+				</div>
+				<div ng-if="followed && !questionOwner()">
+					<button class="btn btn-success btn-lg" role="button" style="margin:0 auto; display:block;" ng-click="unfollow()"><i class="fa fa-heart"></i><br> ฟอลโล่ หรือ ติดตามอยู่</button><br>
+					<small>คุณจะได้รับอีเมลเมื่อเพื่อนใจคนนี้มีคําถามทางใจ</small>
+				</div>
+			</div>
+		</div> 
+	</div>
 
 	<div ng-if="error === 'Not Found'" class="col-md-8 text-center animated pulse" style="margin:40px 0;"><i class="fa fa-frown-o fa-4x"></i><br><h1 style="font-size: 3em;">ไม่มีคําถามนี้ในระบบ</h1><br><p>คําถามนี้อาจจะถูกลบไปแล้ว</p><br>
 		<a class="btn btn-lg puanjaiBorder black" ng-href="/">
@@ -19,7 +41,7 @@
 		</a>
 	</div>
 	
-	<div ng-show="question" class="col-lg-8 col-md-12 col-sm-12" style="margin: 15px 0;">
+	<div ng-show="question" class="col-lg-8 col-md-12 col-sm-12">
 		<div class="panel panel-default animated fadeIn">
 			<div class="row">
 				<div class="col-md-2 col-sm-2">
