--- a/client/app/ask/ask.html
+++ b/client/app/ask/ask.html
@@ -84,7 +84,7 @@
 
 				
 					<div id="howToAsk">					
-					<h2 class="blue text-center">ทําไมต้องถาม..</h2>
+					<h2 class="blue text-center">ประโยชน์ของการถาม..</h2>
 						<ul>
 							<li>เพื่อฝึกที่จะแบ่งบันปัญหาใจของเราเอง ฝึกที่จะเป็นคนเปิดเผยและยอมรับต่อความจริง</li>
 							<li>เป็นการฝึกที่จะให้โดยไม่หวังผลตอบแทน</li>
