--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -34,6 +34,13 @@
 	<ul>
 	<li>เปิดบ้าน 24 ยินดีตอนรับทุกท่าน</li>
 	</ul>
+	<hr>
+	<a href="/"><h1>6. ง่ายที่สุด มาช่วยกันถามและตอบปัญหาใจ</h1></a>
+	<ul>
+		<li>เพื่อฝึกที่จะแบ่งบันปัญหาใจของเราเอง ฝึกที่จะเป็นคนเปิดเผยและยอมรับต่อความจริง</li>
+		<li>เป็นการฝึกที่จะให้โดยไม่หวังผลตอบแทน</li>
+		<li>เผื่อคําถามที่เราได้ถามอาจจะได้เป็นแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาเหมือนๆกันให้ได้เจอคําตอบนั้นโดยเร็ว</li>
+	</ul>
 	<br>
 	</div>
 </div>
