--- a/client/app/account/settings/changepass/changepassword.html
+++ b/client/app/account/settings/changepass/changepassword.html
@@ -39,7 +39,7 @@
 
   <p class="help-block"> {{ message }} </p>
 
-  <button class="btn btn-lg btn-primary" type="submit">Save changes</button>
+  <button class="btn btn-lg btn-info" type="submit">เปลี่ยนรหัส</button>
 </form>
 <br>
 </div>
