--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -2,7 +2,7 @@
 <div class="container">
 
 	<div class="page-header">
-	  <h1>มาเป็นส่วนร่วมกับเรา <i class="fa fa-child"></i><br><small>ต้องการความช่วยเหลืออย่างมาก!</small></h1>
+	  <h1>มาเป็นส่วนร่วมกับเรา <i class="fa fa-child"></i><br><small>ต้องการความช่วยเหลือ!</small></h1>
 	</div>
 	
 	<div id="supportUs">
@@ -43,4 +43,17 @@
 	</ul>
 	<br>
 	</div>
+	<hr>
+	<h1 class="text-center">ให้คําเสนอแนะในการทําให้เพื่อนใจอยู่รอดได้</h1>
+	<div id="disqus_thread" style="padding:20px;"></div>
+	<script type="text/javascript">
+	    var disqus_shortname = 'puanjai';
+
+	    (function() {
+	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	    })();
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
