--- a/client/app/account/settings/changepass/changepassword.html
+++ b/client/app/account/settings/changepass/changepassword.html
@@ -1,5 +1,5 @@
 <div ng-controller="ChangePassCtrl">
-<h1>เปลี่ยนรหัส - Change Password</h1>
+<h1 class="text-center">เปลี่ยนรหัส - Change Password</h1>
 <hr>
 <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
 
