--- a/client/app/account/settings/editProfile/editprofile.html
+++ b/client/app/account/settings/editProfile/editprofile.html
@@ -9,8 +9,7 @@
     
   </div>
   <div ng-if="user.emailVerification"class="text-center col-sm-12 emailValidation">
-  <h2 class="green">่ได้รับการยืนยันแล้ว</h2>
-  <button class="btn btn-success btn-lg floatCenter bigger" style="margin:15px auto;"><i class="fa fa-check"></i> ได้รับการยืนยันแล้ว</button>
+  <h2 class="green"><i class="fa fa-check"></i> ได้รับการยืนยันแล้ว</h2>
   </div>
     <span id="helpBlock" class="help-block text-center">เพื่อเป็นการยืนยันตัวตนที่แท้จริง และเพื่อประโยชน์หรือช่องทางในการติดต่อเวลาเพื่อนใจท่านอื่นมาช่วยตอบปัญหาของคุณหรือมาร่วมสนทนาในคําถามของคุณ</span>
   <div class="clearfix"></div><br>
