--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html ng-app="puanJaiApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html ng-app="puanJaiApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html ng-app="puanJaiApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html ng-app="puanJaiApp" class="no-js" lang="th_TH" > <!--<![endif]-->
+<!--[if lt IE 7]>      <html itemtype="http://schema.org/QAPage" ng-app="puanJaiApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html itemtype="http://schema.org/QAPage" ng-app="puanJaiApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html itemtype="http://schema.org/QAPage" ng-app="puanJaiApp" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html itemtype="http://schema.org/QAPage" ng-app="puanJaiApp" class="no-js" lang="th_TH" > <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
