--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -78,7 +78,7 @@
       <div class="row">
         <div ng-repeat="user in users"class="col-md-4">
           <div style="position:absolute: top:10px;">
-            <img class="img-circle" ng-src="{{user.coverimg}}" style="border: 2px solid #428bca; width:150px;"/>
+            <img class="img-circle" ng-src="{{user.coverimg}}" style="border: 2px solid #428bca; width:150px; height:150px;"/>
             <p style="margin: 15px 0;"><i class="fa fa-quote-left pull-left"></i>{{user.reason}}</p>
             <small class="blue">- {{user.username}}</small>
           </div>
