--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -17,7 +17,7 @@
 			<img ng-cloak class="ng-cloak"ng-src="https://placeimg.com/880/640/nature" />
 			</div>
 			<div class="panel-figure">
-				<img class="img-responsive img-rounded puanjaiBorder" ng-src="{{::question.owner.coverimg}}" />
+				<img class="img-responsive img-rounded puanjaiBorder" style="height:70px;width:70px"ng-src="{{::question.owner.coverimg}}" />
 			</div>
 			<div class="panel-body text-center">
 				<h4 class="panel-header"><a ng-href="/users/{{::question.ownerId}}">@{{question.owner.username}}</a></h4>
